--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docker-hello-hostname",
+  "name": "hello-hostname",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "express": "^4.19.2",
+    "morgan": "^1.10.0"
   }
 }
